--- a/src/styles/components/ConferenceModal.less
+++ b/src/styles/components/ConferenceModal.less
@@ -51,17 +51,21 @@
     padding: 4px;
     font-size: 13px;
   }
-  button {
-    margin: auto;
+  .container-action {
     margin-top: 25px;
-    width: 220px;
-    padding: 10px;
-    border-radius: 6px;
-    border:none;
-    font-size: 12px;
-    background-color: #4380c1;
-    color: #fff;
-    cursor: pointer;
+    margin-bottom: 5px;
+    a {
+      margin: auto;
+      margin-top: 25px;
+      width: 220px;
+      padding: 10px;
+      border-radius: 6px;
+      border:none;
+      font-size: 12px;
+      background-color: #4380c1;
+      color: #fff;
+      cursor: pointer;
+    }
   }
 }
 
