--- a/src/styles/components/index.less
+++ b/src/styles/components/index.less
@@ -7,3 +7,4 @@
 @import './ConferenceCard.less';
 @import './ConferenceElectron.less';
 @import './AttendeesList.less';
+@import './AttendeesChat.less';
