--- a/src/styles/components/AttendeesList.less
+++ b/src/styles/components/AttendeesList.less
@@ -2,10 +2,19 @@
     position: absolute;
     width: 350px;
     background: @white;
+    box-shadow: 4px 0px 0px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12), -4px 2px 10px 0 rgba(0, 0, 0, 0.2);
     right: 0;
-    height: 100%;
+    height: ~"calc(100% - 85px)";
     z-index: 100;
     .attendees-list-header{
+        h1 {
+            color: #192246;
+            margin:20px 0px 10px 15px;
+            font-size: 17px;
+            font-family: @font-family-semibold;
+            padding: 0;
+        }
         display: flex;
         justify-content: space-between;
         margin: 0;
@@ -16,9 +25,26 @@
         }
     }
 
-    >ul{
+    .title-section {
+        color: #192246;
+        margin: 10px 0px 10px 25px;
+        font-size: 13px;
+        font-family: @font-family-semibold;
+        padding: 0;
+    }
+
+    ul {
         list-style: none;
-        padding-left: 10px;
+        padding-left: 20px;
+        padding-bottom: 10px;
+        overflow-y: auto;
+        border-bottom: 1px solid #e9e9e9;
+    }
+
+    .participant-invited {
+        .participant-details {
+            opacity: 0.5;
+        }
     }
 
     .participant-details {
