Fix chat title and message container

--- a/src/styles/components/ConferenceAttendees.less
+++ b/src/styles/components/ConferenceAttendees.less
@@ -874,7 +874,7 @@
                   .participant-video {
                     .stream-media {
                       video {
-                        max-height: inherit!important;
+                        //max-height: inherit!important;
                       }
                     }
                   }
