--- a/src/styles/components/AttendeesChat.less
+++ b/src/styles/components/AttendeesChat.less
@@ -8,6 +8,13 @@
     height: ~"calc(100% - 85px)";
     z-index: 100;
     .attendees-chat-header{
+        h1 {
+            color: #192246;
+            margin:20px 0px 10px 15px;
+            font-size: 17px;
+            font-family: @font-family-semibold;
+            padding: 0;
+        }
         display: flex;
         justify-content: space-between;
         margin: 0;
@@ -24,7 +31,7 @@
         margin-bottom: 0;
         margin-top: 0;
         overflow-y: auto;
-        height: ~"calc(100% - 127px)";
+        height: ~"calc(100% - 100px)";
         overflow-x: hidden;
     }
 
@@ -122,24 +129,29 @@
             padding: 8px;
             border: 1px solid #e0e0e0;
             font-size: 1rem;
-            width: -webkit-fill-available;
+            width: 67%;
         }
-        a div {
+        input:focus {
+            outline: none;
+        }
+        a {
             background-image: linear-gradient(225deg, #c0e249 0%, #48d57c 100%);
             background-repeat: repeat-y;
-            padding: 6px 0px 3px 0px;
+            position: absolute;
             font-weight: 600;
-            outline: none;
-            height: 30px;
             border: none;
             font-size: 0.875rem;
+            text-align: right;
             color: #fff;
-            font-size: 16px;
-            letter-spacing: 0;
-            margin: 0;
-            width: 100%;
+            margin: auto;
+            right: 0;
+            padding: 7px;
+            top: 0px;
+            cursor: pointer;
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
             text-align: center;
-            cursor:pointer;
+            width: 30%;
         }
     }
 }
