Add participantLeft in attendeesList

--- a/src/styles/components/AttendeesList.less
+++ b/src/styles/components/AttendeesList.less
@@ -7,6 +7,7 @@
     right: 0;
     height: ~"calc(100% - 85px)";
     z-index: 100;
+    overflow-x: scroll;
     .attendees-list-header{
         h1 {
             color: #192246;
