--- a/src/styles/components/ConferenceAttendees.less
+++ b/src/styles/components/ConferenceAttendees.less
@@ -891,7 +891,7 @@
                        .participant-video {
                          .stream-media {
                            video {
-                             max-height: -webkit-fill-available!important;
+                             max-height: stretch!important;
                              object-fit: contain;
                            }
                          }
