Add browserslist + IE 11 support

--- a/src/styles/components/ConferenceElectron.less
+++ b/src/styles/components/ConferenceElectron.less
@@ -29,6 +29,13 @@
   font-family: @font-family-medium;
   font-size: 18px;
   display: inline-block;
+  a {
+    color: @linkColor;
+    text-decoration: none;
+  }
+  a:visited {
+    color: @linkColor;
+  }
 }
 
 .one {
