--- a/src/styles/components/index.less
+++ b/src/styles/components/index.less
@@ -7,4 +7,8 @@
 @import './ConferenceCard.less';
 @import './ConferenceElectron.less';
 @import './AttendeesList.less';
+@import './AttendeesLive.less';
+@import './AttendeesPresentation.less';
+@import './AttendeesSettings.less';
 @import './AttendeesChat.less';
+@import './PreConfigSettings.less';
