--- a/src/styles/common/MediaQueries.less
+++ b/src/styles/common/MediaQueries.less
@@ -2,10 +2,16 @@
 {
   .settings .content { width: 300px; }
   .vxt-bottom-bar .vxt-bottom-bar-actions {
-    ul {
-      width: 32%;
-      .separator { display: none; }
+    .controls-center {
+      width: 35%;
     }
+    .controls-left {
+      width: 20%;
+    }
+    .controls-right {
+      width: 45%;
+    }
+    .separator { display: none; }
   }
   #external-live { display:none; }
   .electron-info-container { width: 100%;margin:auto; }
@@ -36,12 +42,21 @@
 {
   .vxt-bottom-bar .vxt-bottom-bar-actions {
     ul {
-      width: 33%;
+      .controls-center {
+        width: 31%;
+      }
+      .controls-left {
+        width: 17%;
+      }
+      .controls-right {
+        width: 45%;
+      }
       .separator { margin: 0px 6px; }
     }
   }
   .attendees-chat { width: 285px; }
   .attendees-list { width: 285px; }
+  .attendees-settings { width: 285px; }
   .vxt-conference-attendees .sidebar-container.attendees-list-opened { margin-right: 285px; }
   .vxt-conference-attendees .settings-webinar-presenter .content form { display: inline-block; max-width: 50%; }
   .vxt-conference-attendees .settings-webinar-presenter .modal-thirdparty { display:inline-block; max-width: 50%; }
@@ -57,6 +72,7 @@
 
 @media screen and (max-width: 767px)
 {
+  .vxt-widget-container.vxt-widget-opened { width:100%; }
   .electron-info-container { width: 100%;margin:auto; }
   #loader-container {
     margin: auto;
@@ -65,21 +81,27 @@
     display: block;
     margin-bottom: 20px;
   }
+  .icon-fullscreen-on {
+    display: none!important;
+  }
 
-  .vxt-conference-attendees .layout-container {
-    p {
-      display: none;
+  .vxt-conference-attendees {
+    width: ~"calc(100% - 55px)";
+    .layout-container {
+      p {
+        display: none;
+      }
+      position: absolute;
+      top: 3px;
+      right: 3px;
+      background-color: #fff;
+      padding: 4px 4px 4px 35px;
+      border-radius: 4px;
+      z-index: 100;
+      height: 22px;
+      font-size: 14px;
+      cursor: pointer;
     }
-    position: absolute;
-    top: 3px;
-    right: 3px;
-    background-color: #fff;
-    padding: 5px 5px 5px 33px;
-    border-radius: 4px;
-    z-index: 100;
-    height: 22px;
-    font-size: 14px;
-    cursor: pointer;
   }
   .vxt-conference-attendees .video-frame { min-height: 79px; }
   .vxt-conference-attendees .video-frame .stream-media { padding: 0; }
@@ -238,6 +260,21 @@
     }
   }
   .vxt-conference-attendees {
+    .onboardingmessagewithaction { 
+      font-size: 12px;
+    }
+    .onboardingmessage-fadeout {
+      font-size: 12px;
+    }
+    .onboardingmessagewithaction-hidden {
+      font-size: 12px;
+    }
+    .onboardingmessage {
+      font-size: 12px;
+    }
+    .onboardingmessagewithaction-error {
+      font-size: 12px;
+    }
     .participant-bar {
       width: 110px;
       margin-left: -70px;
@@ -255,8 +292,11 @@
       margin-left:0px;
     }
   }
+  .vxt-widget-fullscreen-on .vxt-conference-attendees .SidebarSpeaker .SidebarList {
+    background:transparent;
+  }
   .vxt-widget-fullscreen-on .vxt-conference-attendees .SidebarSpeaker .SidebarList .list-items .item {
-    height: 70px;
+    height: 78px;
     width: 80px;
     border-bottom: 2px solid rgba(81, 89, 115, 0.8);
     overflow: hidden;
@@ -266,6 +306,10 @@
       }
       span.name {
         min-width: 50px;
+        padding: 0;
+        text-align: center;
+        line-height: 21px;
+        min-height: 21px;
       }
       .bar-icons {
         display: none;
@@ -273,6 +317,8 @@
       top: auto;
       bottom: 0px;
       margin-left: -40px;
+      min-height: 22px;
+      padding: 0px 12px 0px 12px;
       width: 55px;
       border-radius: 0;
     }
@@ -280,24 +326,45 @@
       .preview-avatar {
         width: 40px;
         height: 40px;
-        margin-top: 15px;
+        margin-top: 5px;
       }
     }
   }
-  #screenshare-container { display:none; }
+  #screenshare-container, #pincode-container { display:none; }
   #external-live { display:none; }
-  .attendees-chat { width: 100%; height: ~"calc(100% - 50px)"!important;}
-  .attendees-list { width: 100%; height: ~"calc(100% - 50px)"!important;}
-  .settings .content { width: 100%; height: 100%;padding:0;margin: 0;position: absolute;}
-  .settings .content .close { margin-top: 5px;margin-right: 25px; }
+  .attendees-chat { 
+    width: 100%; height: ~"calc(100% - 40px)"!important;
+    .container-input-chat{
+      bottom:6px;
+      a {
+        font-size: 12px;
+        width: 36%;
+        bottom:0;
+      }
+    }
+  }
+  .attendees-list { width: 100%; height: ~"calc(100% - 40px)"!important;}
+  .attendees-settings { width: 100%; height: ~"calc(100% - 40px)"!important;}
+  .settings .content { width: 100%; height: 100%!important;padding:0;margin: 0;position: absolute;}
+  .settings .content .close { margin-top: 10px;margin-right: 30px; }
+  .settings .content .close a { font-size: 12px; }
   .settings .content .loadbar li { width: 7px; }
   .settings .content .loadbar li .ins { width: 7px; }
   .settings .content h3 { font-size: 16px;margin-top: 20px; }
   .vxt-bottom-bar {
     padding: 5px 0px 5px 0px;
     .vxt-bottom-bar-actions {
-      ul {
+      .controls-center {
         width: 32%;
+      }
+      .controls-left {
+        width: 36%;
+      }
+      .controls-right {
+        width: 32%;
+      }
+      ul {
+        width: 35%;
         margin-bottom: 0px;
         margin-top: 0px;
         .separator { display: none; }
