--- a/src/styles/components/AttendeesChat.less
+++ b/src/styles/components/AttendeesChat.less
@@ -1,7 +1,35 @@
+@keyframes left_to_right {
+    from {
+        right: -350px;
+    }
+    to {
+        right: 0px;
+    }
+  }
+
+
+  @keyframes right_to_left {
+    from {
+        right: 0px;
+    }
+    to {
+        right: -350px;
+    }
+  }
+
+.attendees-chat-hidden {
+    display:none;
+}
+
+.attendees-chat-out {
+    right: -350px!important;
+    animation: right_to_left 250ms ease!important;
+}
 .attendees-chat {
     position: absolute;
-    width: 350px;
+    animation: left_to_right 250ms ease;
     background: @white;
+    width: 350px;
     box-shadow: 4px 0px 0px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.12), -4px 2px 10px 0 rgba(0, 0, 0, 0.2);
     right: 0;
@@ -153,5 +181,11 @@
             text-align: center;
             width: 30%;
         }
+    }
+}
+
+.vxt-widget-mode-on {
+    .attendees-chat {
+        height: 100%;
     }
 }
