--- a/src/styles/components/AttendeesList.less
+++ b/src/styles/components/AttendeesList.less
@@ -1,7 +1,35 @@
+@keyframes left_to_right {
+    from {
+        right: -350px;
+    }
+    to {
+        right: 0px;
+    }
+  }
+
+
+  @keyframes right_to_left {
+    from {
+        right: 0px;
+    }
+    to {
+        right: -350px;
+    }
+  }
+
+.attendees-list-hidden {
+    display:none;
+}
+
+.attendees-list-out {
+    right: -350px!important;
+    animation: right_to_left 250ms ease!important;
+}
 .attendees-list {
     position: absolute;
-    width: 350px;
+    animation: left_to_right 250ms ease;
     background: @white;
+    width: 350px;
     box-shadow: 4px 0px 0px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.12), -4px 2px 10px 0 rgba(0, 0, 0, 0.2);
     right: 0;
@@ -35,6 +63,7 @@
     }
 
     ul {
+        overflow: hidden;
         list-style: none;
         padding-left: 20px;
         padding-bottom: 10px;
@@ -60,5 +89,11 @@
             margin-top: 15px;
             color: @black;
         }
+    }
+}
+
+.vxt-widget-mode-on {
+    .attendees-list {
+        height: 100%;
     }
 }
