fix: mobile layout improvements

--- a/src/styles/common/MediaQueries.less
+++ b/src/styles/common/MediaQueries.less
@@ -133,10 +133,21 @@
 }
 
 @media screen and (min-width: 3600px) {
-  .vxt-conference-attendees .SidebarTiles .list1 #video-undefined-video-on .tile-video .stream-media .video-participant {
+  .vxt-conference-attendees
+    .SidebarTiles
+    .list1
+    #video-undefined-video-on
+    .tile-video
+    .stream-media
+    .video-participant {
     width: 440px;
   }
-  .vxt-widget-fullscreen-on .vxt-conference-attendees .SidebarTiles .tile-item .tile-video .preview-avatar {
+  .vxt-widget-fullscreen-on
+    .vxt-conference-attendees
+    .SidebarTiles
+    .tile-item
+    .tile-video
+    .preview-avatar {
     width: 240px;
     height: 240px;
   }
@@ -147,7 +158,8 @@
     margin-bottom: 50px !important;
     width: 750px !important;
     height: 750px !important;
-    img, .ddloader {
+    img,
+    .ddloader {
       width: 750px !important;
       height: 750px !important;
     }
@@ -189,13 +201,14 @@
   .vxt-conference-attendees {
     width: ~"calc(100% - 55px)";
     .layout-container {
-      p, a {
+      p,
+      a {
         display: none;
       }
       .layout-arrow {
         img {
           top: 12px;
-          right: 12px
+          right: 12px;
         }
       }
       position: absolute;
@@ -273,9 +286,6 @@
   }
   .vxt-conference-attendees .SidebarTiles {
     height: 99%;
-    .participant-bar {
-      bottom: 2px !important;
-    }
     &[data-number-user="1"] {
       .tile-item {
         height: ~"calc(100% - 23px)";
@@ -558,8 +568,8 @@
               margin-left: -26px !important;
               margin-top: 10px !important;
               z-index: 1;
-              font-family: 'DINNextLTPro-Regular';
-              background: #13141C;
+              font-family: "DINNextLTPro-Regular";
+              background: #13141c;
               border-radius: 50px;
             }
           }
@@ -579,13 +589,14 @@
   .vxt-conference-attendees {
     width: ~"calc(100% - 55px)";
     .layout-container {
-      p, a {
+      p,
+      a {
         display: none;
       }
       .layout-arrow {
         img {
           top: 12px;
-          right: 12px
+          right: 12px;
         }
       }
       position: absolute;
@@ -602,9 +613,7 @@
   }
   .vxt-conference-attendees .SidebarTiles {
     height: 99%;
-    .list1 
-    .tile-item 
-    .tile-video {
+    .list1 .tile-item .tile-video {
       // .container-avatar-vumeter {
       //   left: 2% !important;
       // }
@@ -802,7 +811,7 @@
           a {
             height: 40px;
             width: 40px;
-            img{
+            img {
               width: 40px;
               vertical-align: middle;
               margin: auto;
@@ -821,8 +830,8 @@
               margin-left: -26px !important;
               margin-top: 12px !important;
               z-index: 1;
-              font-family: 'DINNextLTPro-Regular';
-              background: #13141C;
+              font-family: "DINNextLTPro-Regular";
+              background: #13141c;
               border-radius: 50px;
             }
           }
@@ -889,14 +898,14 @@
       }
     }
 
-    &[data-number-user='5']{
-      .tile-item{
+    &[data-number-user="5"] {
+      .tile-item {
         height: ~"calc(50% - 14px)" !important;
         max-width: calc(100% / 4) !important;
       }
     }
-    &[data-number-user='6']{
-      .tile-item{
+    &[data-number-user="6"] {
+      .tile-item {
         height: ~"calc(50% - 14px)" !important;
         max-width: calc(100% / 4) !important;
       }
@@ -961,7 +970,7 @@
         max-width: calc(100% / 8) !important;
       }
     }
-  }  
+  }
 }
 
 @media screen and (orientation: portrait) and (min-width: 768px) and (max-width: 991px) {
@@ -1332,10 +1341,21 @@
 }
 
 @media screen and (orientation: portrait) and (min-width: 3600px) {
-  .vxt-conference-attendees .SidebarTiles .list1 #video-undefined-video-on .tile-video .stream-media .video-participant {
+  .vxt-conference-attendees
+    .SidebarTiles
+    .list1
+    #video-undefined-video-on
+    .tile-video
+    .stream-media
+    .video-participant {
     width: 440px;
   }
-  .vxt-widget-fullscreen-on .vxt-conference-attendees .SidebarTiles .tile-item .tile-video .preview-avatar {
+  .vxt-widget-fullscreen-on
+    .vxt-conference-attendees
+    .SidebarTiles
+    .tile-item
+    .tile-video
+    .preview-avatar {
     width: 240px;
     height: 240px;
   }
@@ -1346,7 +1366,8 @@
     margin-bottom: 50px !important;
     width: 750px !important;
     height: 750px !important;
-    img, .ddloader {
+    img,
+    .ddloader {
       width: 750px !important;
       height: 750px !important;
     }
@@ -1388,13 +1409,14 @@
   .vxt-conference-attendees {
     width: ~"calc(100% - 55px)";
     .layout-container {
-      p, a {
+      p,
+      a {
         display: none;
       }
       .layout-arrow {
         img {
           top: 12px;
-          right: 12px
+          right: 12px;
         }
       }
       position: absolute;
@@ -1439,9 +1461,9 @@
     .tile-item
     .tile-video
     .video-participant {
-      // width: 150px !important;
-      bottom: 10px !important;
-      left: 10px !important;
+    // width: 150px !important;
+    bottom: 10px !important;
+    left: 10px !important;
   }
   .vxt-conference-attendees .Sidebar3D .react-draggable {
     width: 70px;
@@ -1482,9 +1504,6 @@
   }
   .vxt-conference-attendees .SidebarTiles {
     height: 99%;
-    .participant-bar {
-      bottom: 2px !important;
-    }
     &[data-number-user="1"] {
       .tile-item {
         height: ~"calc(100% - 28px)";
@@ -1802,8 +1821,8 @@
               margin-left: -26px !important;
               margin-top: 10px !important;
               z-index: 1;
-              font-family: 'DINNextLTPro-Regular';
-              background: #13141C;
+              font-family: "DINNextLTPro-Regular";
+              background: #13141c;
               border-radius: 50px;
             }
           }
@@ -1823,13 +1842,14 @@
   .vxt-conference-attendees {
     width: ~"calc(100% - 55px)";
     .layout-container {
-      p, a {
+      p,
+      a {
         display: none;
       }
       .layout-arrow {
         img {
           top: 12px;
-          right: 12px
+          right: 12px;
         }
       }
       position: absolute;
@@ -1846,9 +1866,7 @@
   }
   .vxt-conference-attendees .SidebarTiles {
     height: 99%;
-    .list1 
-    .tile-item 
-    .tile-video {
+    .list1 .tile-item .tile-video {
       // .container-avatar-vumeter {
       //   left: 2% !important;
       // }
@@ -2046,7 +2064,7 @@
           a {
             height: 40px;
             width: 40px;
-            img{
+            img {
               width: 40px;
               vertical-align: middle;
               margin: auto;
@@ -2065,8 +2083,8 @@
               margin-left: -26px !important;
               margin-top: 12px !important;
               z-index: 1;
-              font-family: 'DINNextLTPro-Regular';
-              background: #13141C;
+              font-family: "DINNextLTPro-Regular";
+              background: #13141c;
               border-radius: 50px;
             }
           }
