--- a/src/styles/common/ParticipantVuMeter.less
+++ b/src/styles/common/ParticipantVuMeter.less
@@ -54,7 +54,7 @@
 .tile-video > .container-avatar-vumeter {
   width: 100%;
   position: absolute;
-  top: calc(50% - 60px);
+  height: 100%;
   display: flex;
   vertical-align: middle;
   align-items: center;
