fix: height auto for avatar

--- a/src/styles/components/ConferenceAttendees.less
+++ b/src/styles/components/ConferenceAttendees.less
@@ -21,7 +21,7 @@
   .toggle-fullscreen {
     position: absolute;
     top: 15px;
-    background-color: #3E44FE;
+    background-color: #3e44fe;
     // background-color: #515973;
     width: 40px;
     height: 40px;
@@ -95,16 +95,8 @@
     position: inherit;
     z-index: 500;
     opacity: 0.85;
-    background: -webkit-linear-gradient(
-      left,
-      #3E44FE 0%,
-      #AA33FF 100%
-    );
-    background: linear-gradient(
-      to right,
-      #3E44FE 0%,
-      #AA33FF 100%
-    );
+    background: -webkit-linear-gradient(left, #3e44fe 0%, #aa33ff 100%);
+    background: linear-gradient(to right, #3e44fe 0%, #aa33ff 100%);
     color: #fff;
     width: 60%;
     padding: 5px 0px 5px 0px;
@@ -138,16 +130,8 @@
     transition: visibility 0.25s, opacity 0.25s linear;
     position: absolute;
     z-index: 500;
-    background: -webkit-linear-gradient(
-      left,
-      #3E44FE 0%,
-      #AA33FF 100%
-    );
-    background: linear-gradient(
-      to right,
-      #3E44FE 0%,
-      #AA33FF 100%
-    );
+    background: -webkit-linear-gradient(left, #3e44fe 0%, #aa33ff 100%);
+    background: linear-gradient(to right, #3e44fe 0%, #aa33ff 100%);
     color: #fff;
     width: 40%;
     padding: 20px 15px 20px 15px;
@@ -165,16 +149,8 @@
     position: absolute;
     z-index: 500;
     opacity: 0.85;
-    background: -webkit-linear-gradient(
-      left,
-      #3E44FE 0%,
-      #AA33FF 100%
-    );
-    background: linear-gradient(
-      to right,
-      #3E44FE 0%,
-      #AA33FF 100%
-    );
+    background: -webkit-linear-gradient(left, #3e44fe 0%, #aa33ff 100%);
+    background: linear-gradient(to right, #3e44fe 0%, #aa33ff 100%);
     color: #fff;
     width: 40%;
     padding: 20px 15px 20px 15px;
@@ -196,14 +172,14 @@
     top: 25px;
     right: 20px;
     // background-color: #fff;
-    background-image: linear-gradient(225deg, #AA33FF, #3E44FE);
+    background-image: linear-gradient(225deg, #aa33ff, #3e44fe);
     opacity: 0.85;
     color: #fff;
     padding: 7px;
     border-radius: 50px;
     z-index: 100;
     font-size: 16px;
-    font-family: 'DINNextLTPro-Medium';
+    font-family: "DINNextLTPro-Medium";
     cursor: pointer;
     a img {
       width: 22px;
@@ -344,12 +320,12 @@
     padding: 15px 15px 15px 10px;
     margin-bottom: 0;
     /* Visual */
-    border-bottom: 1px solid #13141C;
+    border-bottom: 1px solid #13141c;
     h1 {
       /* Box model */
       margin-left: 7px;
       font-size: 18px;
-      font-family: 'DINNextLTPro-Regular';
+      font-family: "DINNextLTPro-Regular";
       display: inline-block;
       margin-bottom: 0;
       padding: 0;
@@ -379,7 +355,7 @@
   }
   .timer {
     color: @mutedColor;
-    font-family: 'DINNextLTPro-Regular';
+    font-family: "DINNextLTPro-Regular";
     display: inline-block;
   }
   .icn-status {
@@ -449,10 +425,7 @@
     margin-left: 0;
     margin-right: 0;
     width: 100%;
-    background: linear-gradient(
-      #13141C 0%, 
-      #424248 100%
-    );
+    background: linear-gradient(#13141c 0%, #424248 100%);
     background-repeat: no-repeat;
     background-size: cover;
     .react-draggable {
@@ -577,16 +550,17 @@
       //background-color: #f5f5f5;
     }
     .list1 {
-      #video-undefined-video-on, #video-undefined-video-off {
+      #video-undefined-video-on,
+      #video-undefined-video-off {
         .tile-video {
-          background: url('../../static/images/bg/jeremy-bishop-123463-unsplash.jpg');
+          background: url("../../static/images/bg/jeremy-bishop-123463-unsplash.jpg");
           background-repeat: no-repeat;
           background-size: cover;
           .stream-media {
             display: flex;
             align-items: center;
             justify-content: center;
-            
+
             .video-participant {
               width: 220px;
               height: auto;
@@ -602,11 +576,12 @@
             bottom: 15px;
             left: 15px;
             top: auto;
+            height: auto;
           }
           .myself {
             .video-participant {
               border-radius: 8px;
-              border: 1px solid #3E44FE;
+              border: 1px solid #3e44fe;
             }
           }
         }
@@ -709,10 +684,7 @@
           // background-repeat: no-repeat;
           // background-size: cover;
           // background-color: #000c31;
-          background: linear-gradient(
-            #13141C 0%, 
-            #424248 100%
-          );
+          background: linear-gradient(#13141c 0%, #424248 100%);
           .stream-media {
             width: 100%;
             height: 100%;
@@ -983,15 +955,15 @@
         // background-size: cover;
         //background-color: #000c31;
         background: -moz-linear-gradient(
-          #13141C 0%, 
+          #13141c 0%,
           #424248 100%
         ); /* FF3.6-15 */
         background: -webkit-linear-gradient(
-          #13141C 0%, 
+          #13141c 0%,
           #424248 100%
         ); /* Chrome10-25,Safari5.1-6 */
         background: linear-gradient(
-          #13141C 0%, 
+          #13141c 0%,
           #424248 100%
         ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#13141C', endColorstr='#424248',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
@@ -1161,15 +1133,15 @@
         margin-bottom: 8px;
         background: rgb(21, 28, 63); /* Old browsers */
         background: -moz-linear-gradient(
-          #13141C 0%, 
+          #13141c 0%,
           #424248 100%
         ); /* FF3.6-15 */
         background: -webkit-linear-gradient(
-          #13141C 0%, 
+          #13141c 0%,
           #424248 100%
         ); /* Chrome10-25,Safari5.1-6 */
         background: linear-gradient(
-          #13141C 0%, 
+          #13141c 0%,
           #424248 100%
         ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#13141C', endColorstr='#424248',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
@@ -1728,18 +1700,18 @@
       border-radius: 50px;
       background: -moz-linear-gradient(
         225deg,
-        #AA33FF 0%,
-        #3E44FE 100%
+        #aa33ff 0%,
+        #3e44fe 100%
       ); /* FF3.6-15 */
       background: -webkit-linear-gradient(
         225deg,
-        #AA33FF 0%,
-        #3E44FE 100%
+        #aa33ff 0%,
+        #3e44fe 100%
       ); /* Chrome10-25,Safari5.1-6 */
       background: linear-gradient(
         225deg,
-        #AA33FF 0%,
-        #3E44FE 100%
+        #aa33ff 0%,
+        #3e44fe 100%
       ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#AA33FF', endColorstr='#3E44FE',GradientType=1 ); /* IE6-9 */
     }
@@ -1764,18 +1736,18 @@
       border-radius: 50px;
       background: -moz-linear-gradient(
         left,
-        #3E44FE 0%,
-        #AA33FF 100%
+        #3e44fe 0%,
+        #aa33ff 100%
       ); /* FF3.6-15 */
       background: -webkit-linear-gradient(
         left,
-        #3E44FE 0%,
-        #AA33FF 100%
+        #3e44fe 0%,
+        #aa33ff 100%
       ); /* Chrome10-25,Safari5.1-6 */
       background: linear-gradient(
         to right,
-        #3E44FE 0%,
-        #AA33FF 100%
+        #3e44fe 0%,
+        #aa33ff 100%
       ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E44FE', endColorstr='#AA33FF',GradientType=1 ); /* IE6-9 */
     }
@@ -1878,7 +1850,7 @@
   // background-color: @dropdownTextColor !important;
   background-color: #424248 !important;
   // font-family: @font-family-semibold;
-  font-family: 'DINNextLTPro-Regular';
+  font-family: "DINNextLTPro-Regular";
   padding-top: 10px;
   text-transform: capitalize;
   &.place-top {
