--- a/src/styles/components/AttendeesPresentation.less
+++ b/src/styles/components/AttendeesPresentation.less
@@ -83,7 +83,7 @@
     opacity: 0.6;
     cursor: not-allowed;
   }
-  button {
+  a {
     cursor: pointer;
     margin: 15px;
     background-color: #515973;
@@ -92,15 +92,17 @@
     padding: 5px 15px 5px 15px;
     border-radius: 4px;
     font-size: 14px;
+    user-select: none;
   }
-  button:hover {
+  a:hover {
     -moz-box-shadow: 0px 0px 5px 0px #656565;
     -webkit-box-shadow: 0px 0px 5px 0px #656565;
     -o-box-shadow: 0px 0px 5px 0px #656565;
     box-shadow: 0px 0px 5px 0px #656565;
     filter: progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=NaN, Strength=5);
+    user-select: none;
   }
-  button:focus {
+  a:focus {
     outline: 0;
   }
 }
@@ -108,7 +110,7 @@
 .loader-file-presentation {
   border: 2px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 2px solid #3E44FE;
+  border-top: 2px solid #3e44fe;
   width: 28px;
   height: 28px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
@@ -145,7 +147,7 @@
     .controls-file-presentation {
       bottom: 120px;
       width: 100%;
-      button {
+      a {
         padding: 3px 7px 3px 7px;
         font-size: 11px;
       }
