--- a/src/styles/common/MediaQueries.less
+++ b/src/styles/common/MediaQueries.less
@@ -199,6 +199,19 @@
   }
 
   .vxt-conference-attendees {
+    .question-icon {
+      margin-left: 7px !important;
+      line-height: 18px !important;
+      font-size: 14px !important;
+      width: 18px !important;
+      height: 18px !important;
+    }
+    .onboardingmessageoverlay {
+      font-size: 12px;
+      .overlay-wrapper {
+        width: 80%;
+      }
+    }
     width: ~"calc(100% - 55px)";
     .layout-container {
       p,
@@ -389,19 +402,19 @@
     }
   }
   .vxt-conference-attendees {
-    .onboardingmessagewithaction {
+    .onboardingmessagewithaction, .onboardingmessagewithdescription {
       font-size: 12px;
     }
     .onboardingmessage-fadeout {
       font-size: 12px;
     }
-    .onboardingmessagewithaction-hidden {
+    .onboardingmessagewithaction-hidden, .onboardingmessagewithdescription-hidden {
       font-size: 12px;
     }
     .onboardingmessage {
       font-size: 12px;
     }
-    .onboardingmessagewithaction-error {
+    .onboardingmessagewithaction-error, .onboardingmessagewithdescription-error {
       font-size: 12px;
     }
     .participant-bar {
@@ -1642,19 +1655,26 @@
     }
   }
   .vxt-conference-attendees {
-    .onboardingmessagewithaction {
+    .question-icon {
+      margin-left: 7px !important;
+      line-height: 18px !important;
+      font-size: 14px !important;
+      width: 18px !important;
+      height: 18px !important;
+    }
+    .onboardingmessagewithaction, .onboardingmessagewithdescription {
       font-size: 12px;
     }
     .onboardingmessage-fadeout {
       font-size: 12px;
     }
-    .onboardingmessagewithaction-hidden {
+    .onboardingmessagewithaction-hidden, .onboardingmessagewithdescription-hidden {
       font-size: 12px;
     }
     .onboardingmessage {
       font-size: 12px;
     }
-    .onboardingmessagewithaction-error {
+    .onboardingmessagewithaction-error, .onboardingmessagewithdescription-error {
       font-size: 12px;
     }
     .participant-bar {
